new project added

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lifecycle-compmonent",
+  "name": "lifecycle-component",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
